# ANN-Based-Resume-Job-Compatibility-Scoring-System

./: Kaggle Dataset Link.url  README.md  main.py  pyproject.toml  requirements.txt
dataset/: numerified_resume_data.csv
feature_engineering/: data_preprocessing_nb.ipynb  feature_aggregation_nb.ipynb
neural_network/: ann.ipynb
neural_network/logs/fit/20260201-153140/train/: events.out.tfevents.1769940155.JD-SHRI.14612.0.v2
neural_network/logs/fit/20260201-153140/validation/: events.out.tfevents.1769940158.JD-SHRI.14612.1.v2
neural_network/logs/fit/20260201-153314/train/: events.out.tfevents.1769940194.JD-SHRI.14612.2.v2
neural_network/logs/fit/20260201-153314/validation/: events.out.tfevents.1769940195.JD-SHRI.14612.3.v2
neural_network/logs/fit/20260201-153424/train/: events.out.tfevents.1769940264.JD-SHRI.14612.4.v2
neural_network/logs/fit/20260201-153424/validation/: events.out.tfevents.1769940264.JD-SHRI.14612.5.v2
neural_network/logs/fit/20260201-153552/train/: events.out.tfevents.1769940352.JD-SHRI.14612.6.v2
neural_network/logs/fit/20260201-153552/validation/: events.out.tfevents.1769940353.JD-SHRI.14612.7.v2
neural_network/logs/fit/20260201-154337/train/: events.out.tfevents.1769940817.JD-SHRI.14612.8.v2
neural_network/logs/fit/20260201-154337/validation/: events.out.tfevents.1769940818.JD-SHRI.14612.9.v2
neural_network/logs/fit/20260201-154705/train/: events.out.tfevents.1769941025.JD-SHRI.14612.10.v2
neural_network/logs/fit/20260201-155255/train/: events.out.tfevents.1769941375.JD-SHRI.14612.12.v2
pickled_data/: model.h5  scaler.pkl
(+12 files in other folders)
