[project]
name = "ann"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "protobuf==3.20.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.53.1",
    "tensorflow==2.15.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
]
